--- a/reactjs.html
+++ b/reactjs.html
@@ -7,4 +7,7 @@
 <body>
     
 </body>
+<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script></script>
 </html>
