--- a/reactjs.html
+++ b/reactjs.html
@@ -13,16 +13,22 @@
     <!-- allows react to access the html section -->
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 
-    <!-- using reactjs, we create all the html components with react. so updating html, functions, css, actions are much powerful and efficient -->
+    <!-- 
+        using reactjs, we create all the html components with react.
+        so updating html, functions, css, actions are much powerful and efficient 
+    -->
 
     <script>
         const root = document.getElementById("root");
-        const span = React.createElement(
-            "span", 
-            {id:"new-line"}, 
-            "Hello, this is a span",
-            style: {color: "red"}
-            );
-        ReactDOM.render(span, root);
+        const span = React.createElement("span", null, "Hello, this is a span",style: {color: "red"});
+        const btn = React.createElement(
+            "button",
+            {
+                onClick: () => console.log("I'm clicked")
+            },
+            "Click me");
+        const container = React.createElement("div", null, [span, btn]);
+
+        ReactDOM.render(container, root);
     </script>
 </html>
