--- a/vanilla_js_ex/reactjs.html
+++ b/vanilla_js_ex/reactjs.html
@@ -22,10 +22,10 @@
         const root = document.getElementById("root");
         const Title = (
             <h3 id: "title" onMouseEnter ={() => console.log("mouse enter")}>
-            Hello, I'm a title
+            This is a title
             </h3>
         );
-        const btn =(
+        const Button =(
             <button id="button" onClick ={() => console.log("I'm clicked")}>
             Click Me
             </button>
