--- a/vanilla_js_ex/unit_converter.html
+++ b/vanilla_js_ex/unit_converter.html
@@ -20,6 +20,9 @@
         const onChange = (event) => {
             setMinutes(event.target.value);
         };
+        const reset = () => {
+            setMinutes(0);
+        };
         return(
             <div>
                 <h1 className="title">Super Converter</h1>
@@ -45,6 +48,8 @@
                     type="number"  
                 />
             </div>
+
+            <button onClick={reset}>Reset</button>
         );
     }
     ReactDOM.render(<App />, root);
